<resources>
    <string name="app_name">KeralaRescue</string>
    <string name="notice_text_malayalam">പ്രളയ ബാധിതർ സഹായം തേടാൻ താഴെ കാണുന്ന വലിയ കറുത്ത ബട്ടണിൽ അമർത്തുക. നിങ്ങളുടെ ലൊക്കേഷനും മറ്റു അത്യാവശ്യ വിവരങ്ങളും ദുരന്ത നിവാരണ സേനയിലേക്ക് ഉടൻ കൈമാറപ്പെടും.</string>
    <string name="notice_text_english">Please use the black button below to share your location and other important information with the rescue authorities in case of an emergency</string>
    <string name="no_internet_text_english">In case of no internet connectivity please call to one of these numbers to get help</string>
    <string name="emergency_numbers">1070, 1074, 1077</string>
    <string name="number_of_people_english">Number of people</string>
    <string name="current_location">Your current location</string>
    <string name="no_internet_text_malayalam">ഇന്റര്നെറ് സംവിധാനം ഇല്ലാത്തവർ താഴെ കാണുന്ന നമ്പറിൽ വിളിക്കുക</string>
    <string name="number_of_people_malayalam">ആളുകളുടെ എണ്ണം</string>
    <string name="IsRequestSent">RequestStatus</string>
    <string name="gps_network_not_enabled">Please Enable Location to Share Your Current Location to Rescue Team</string>
    <string name="open_location_settings">Enable Now</string>
    <string name="edit">Edit</string>
    <string name="get_help">GET HELP</string>
    <string name="request_submitted">REQUEST SUBMITTED</string>
    <string name="one">1</string>
    <string name="notice">Notice</string>
    <string name="recieved_request">അഭ്യർത്ഥന സ്വീകരിച്ചു</string>
    <string name="Get_help">സഹായം തേടുക</string>
    <string name="edit_option">തിരുത്തുക</string>
    <string name="loading">Loading…</string>
    <string name="your_place">നിങ്ങളുടെ സ്ഥലം</string>
    <string name="Notice">അറിയിപ്പ്</string>
    <string name="desc_btn_bank_transfer">Bank Transfer</string>
    <string name="desc_btn_chk_ds">Cheque , DD</string>
    <string name="desc_btn_qr_code">Scan QR Code</string>
    <string name="desc_btn_vpa">Send with VPA</string>

    <string name="activity_donate_go_back">GO BACK</string>
    <string name="activity_donate_mode">Select Mode of Transfer</string>
    <string name="bank_transfer_heading">Bank Transfer</string>
    <string name="bank_transfer_bank_name">Bank: State Bank of India (SBI)</string>
    <string name="bank_transfer_account_number">Account Number: 67319948232</string>
    <string name="bank_transfer_branch">Branch : City Branch, Thiruvananthapuram</string>
    <string name="bank_transfer_ifsc">IFSC : SBIN0070028</string>
    <string name="bank_transfer_pan">PAN: AAAGD0584M</string>
    <string name="bank_transfer_account_type">Account Type: Savings</string>
    <string name="bank_transfer_swift_code">SWIFT CODE : SBININBBT08</string>
    <string name="cheque_dd_heading">Cheque/DD Payment</string>
    <string name="cheque_dd_message">Contributions can be made as Cheque/Demand Draft drawn in the name of Principal Secretary (Finance) payable at Thiruvananthapuram. Cheque / DD may be sent to:</string>
    <string name="cheque_dd_address">Principal Secretary (Finance),\nTreasurer\nChief Minister\'s Distress Relief Fund\nSecretariat\nThiruvananthapuram – 695 001\nKerala</string>

    <string name="Contat">അറിയിപ്പ്</string>
    <string name="contact_number__english">Contact Number</string>
    <string name="contact_number__malayalam">വിളിക്കേണ്ട നമ്പർ</string>

    <string name="title_activity_request">Request</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_request_status">RequestStatusActivity</string>
</resources>
