<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="10dp">
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:background="@drawable/cornered_edges">

            <Button
                android:id="@+id/malayalam"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/cornered_edges_malayalam_selected"
                android:text="മലയാളം"
                android:drawableLeft="@mipmap/selectedcheck"
                android:paddingLeft="10dp"
                android:textColor="@android:color/white" />
            <Button
                android:id="@+id/english"
                android:text="English"
                android:background="@drawable/cornered_edges_english_deselected"
                android:textColor="@android:color/black"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawableLeft="@mipmap/deselectedcheck"
                android:paddingLeft="10dp"
                android:layout_height="match_parent" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/malayalam_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/Notice"
                    android:textColor="@android:color/black"

                    android:textSize="20sp"

                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/notice_text_malayalam"
                    android:textColor="@android:color/black"

                    android:textSize="16sp"

                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:gravity="center"
                    android:text="@string/no_internet_text_malayalam"
                    android:textColor="@android:color/black"

                    android:textSize="15sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/emergency_numbers"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="22sp" />
                <TextView
                    android:id="@+id/contact_number_text_malayalam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/contact_number__malayalam"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/contact_number_edit_malayalam"
                    android:background="@drawable/rounded_edge_noofpeopple"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_height="50dp"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:inputType="number"
                    android:text=""
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/number_mal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/number_of_people_malayalam"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/no_of_people_malayalam"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rounded_edge_noofpeopple"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="@string/one"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />


                <ProgressBar
                    android:layout_weight="1"
                    android:id="@+id/progressBar_cyclic"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="40dp"
                    android:minWidth="40dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/help_status_malayalam">

                    <TextView
                        android:id="@+id/loc_mal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:text="@string/your_place"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />
                    <EditText
                        android:background="@android:color/transparent"
                        android:enabled="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:id="@+id/location_text_malayalam"
                        android:text="@string/loading"
                        android:textColor="@android:color/black"
                        android:textSize="22sp" />
                    <Button
                        android:id="@+id/edit_location_malayalam"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/rounded_edge_edit_button"
                        android:gravity="center"
                        android:text="@string/edit_option"
                        android:drawableLeft="@mipmap/edit"
                        android:paddingLeft="10dp"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                    <Button
                        android:id="@+id/get_help_malayalam"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/rounded_edge_edit_button"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:drawableLeft="@mipmap/help"
                        android:text="@string/Get_help"
                        android:textColor="@android:color/white"
                        android:textSize="22sp" />
                    <Button
                        android:id="@+id/success_malayalam"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/rounded_edge_success_button"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:drawableLeft="@mipmap/help"
                        android:text="@string/recieved_request"
                        android:textColor="@android:color/white"
                        android:textSize="22sp"
                        android:visibility="gone" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/english_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:visibility="invisible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/notice"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/notice_text_english"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/no_internet_text_english"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/emergency_numbers"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="22sp" />
                <TextView
                    android:id="@+id/contact_number_text_english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/contact_number__english"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/contact_number_edit_english"
                    android:background="@drawable/rounded_edge_noofpeopple"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_height="50dp"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:inputType="number"
                    android:text=""
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />
                <TextView
                    android:id="@+id/number_eng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/number_of_people_english"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/no_of_people_english"
                    android:background="@drawable/rounded_edge_noofpeopple"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_height="50dp"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="@string/one"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />

                <ProgressBar
                    android:layout_weight="1"
                    android:id="@+id/progressBar_cyclic_eng"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:minHeight="40dp"
                    android:minWidth="40dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/help_status_english">

                    <TextView
                        android:id="@+id/loc_eng"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="@string/current_location"
                        android:textColor="@android:color/black"
                        android:textSize="22sp" />

                    <EditText
                        android:background="@android:color/transparent"
                        android:enabled="false"
                        android:inputType="text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:id="@+id/location_text_english"
                        android:layout_marginTop="10dp"
                        android:text="@string/loading"
                        android:textColor="@android:color/black"
                        android:textSize="22sp" />

                    <Button
                        android:id="@+id/edit_location_english"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/rounded_edge_edit_button"
                        android:gravity="center"
                        android:text="@string/edit"
                        android:paddingLeft="10dp"
                        android:drawableLeft="@mipmap/edit"
                        android:textColor="@android:color/white"

                        android:textSize="22sp" />
                    <Button
                        android:id="@+id/get_help_english"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/rounded_edge_edit_button"
                        android:gravity="center"
                        android:text="@string/get_help"
                        android:paddingLeft="10dp"
                        android:drawableLeft="@mipmap/help"
                        android:textColor="@android:color/white"
                        android:textSize="22sp" />

                    <Button
                        android:id="@+id/success"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/rounded_edge_success_button"
                        android:gravity="center"
                        android:text="@string/request_submitted"
                        android:paddingLeft="10dp"
                        android:drawableLeft="@mipmap/help"
                        android:textColor="@android:color/white"
                        android:textSize="22sp"
                        android:visibility="gone" />

                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>
</ScrollView>